# SudokuLogic

./: CMakeLists.txt  README.md
program/: CMakeLists.txt
program/src/: main.cpp
test/: CMakeLists.txt  CellGroupTests.cpp  CellTest.cpp  CircularSequenceTest.cpp  SudokuTest.cpp
